新增部分设计模式和静态代理和动态代理

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>apollo</module>
         <module>springbootlogger</module>
         <module>tlcache</module>
+        <module>proxypattern</module>
     </modules>
 
 
