集合源码学习

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>springbootlogger</module>
         <module>tlcache</module>
         <module>proxypattern</module>
+        <module>collectionstudy</module>
     </modules>
 
 
